force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Time__c</fullName>
    <formula>Registration_Session__r.Expiration_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>