force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Is_Valid_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Ticket__c</fullName>
    <formula>Registration_Session__r.Is_Valid_Session__c &amp;&amp; NOT(ISPICKVAL(Participation__r.Status__c, &quot;Cancelled&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid Ticket</label>
    <type>Checkbox</type>
</CustomField>