force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Number_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets__c</fullName>
    <label>Number of Tickets</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>