force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <referenceTo>ucinn_portal_Participation__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>ucinn_portal_Tickets_Participation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>