force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Price_Per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Ticket__c</fullName>
    <label>Price Per Ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>