force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Registration_Session__c.field-meta.xml
<CustomField>
    <fullName>Registration_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Session</label>
    <referenceTo>ucinn_portal_Registration_Session__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>ucinn_portal_Tickets_Reg_Session</relationshipName>
    <type>Lookup</type>
</CustomField>