force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(ISPICKVAL(Registration_Session__r.Status__c, &apos;Completed&apos;), &apos;Paid&apos;, TEXT(Registration_Session__r.Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>