force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Ticket_Discount__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Discount</label>
    <referenceTo>ucinn_portal_Ticket_Discount__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>ucinn_portal_Tickets_Ticket_Discount</relationshipName>
    <type>Lookup</type>
</CustomField>