force-app/main/default/objects/ucinn_portal_Ticket__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <referenceTo>ucinn_portal_Ticket_Type__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>ucinn_portal_Tickets_Ticket_Type</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>